# terraform-compliance

./: .coverage  .coveragerc  README.md  clean.sh  setup.cfg  setup.py  tox.ini
.tox/cov-report/: .tox-config1
.tox/cov-report/lib/python3.6/: __future__.py  _collections_abc.py  _weakrefset.py  abc.py  base64.py  copy.py  encodings  fnmatch.py  genericpath.py  io.py  locale.py  operator.py  reprlib.py  sre_compile.py  tarfile.py  tempfile.py  weakref.py
.tox/py36/: .tox-config1
.tox/py36/include/: python3.6m
.tox/py36/lib/python3.6/: LICENSE.txt  _bootlocale.py  _dummy_thread.py  bisect.py  codecs.py  collections  config-3.6m-darwin  copyreg.py  enum.py  functools.py  hashlib.py  heapq.py  hmac.py  imp.py  importlib  keyword.py  lib-dynload  linecache.py  ntpath.py  orig-prefix.txt  os.py  posixpath.py  random.py  re.py  rlcompleter.py  shutil.py  sre_constants.py  sre_parse.py  stat.py  struct.py  token.py  tokenize.py  types.py  warnings.py
terraform_compliance/: TerraformValidator.py
terraform_compliance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
terraform_compliance/rules/: S3Rules.py
test/: example.tfstate  test_terraform_compliance.py
